--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "postcss-font-magician": "^2.3.1",
+    "pretty-bytes": "^5.3.0",
+    "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
+    "vue2-dropzone": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -21,7 +29,13 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "postcss-custom-properties": "^9.0.2",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
+    "tailwindcss": "^1.2.0-canary.1",
+    "tailwindcss-theming": "^2.3.0",
+    "tailwindcss-transitions": "^2.1.0",
     "typescript": "~3.5.3",
     "vue-template-compiler": "^2.6.10"
   }
